--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="blue">#FF5C72B2</color>
     <color name="ltblue">#225C72B2</color>
     <color name="yellow">#FFFFCF35</color>
+    <color name="grey">#4A4A4A</color>
 
 </resources>
