feat: draft activity_listing.xml layout complete

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.MainActivity"
-            android:background="@color/ltblue">
+            android:background="@color/ltyellow">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/header_container"
