--- a/app/src/main/res/layout/activity_add_listing.xml
+++ b/app/src/main/res/layout/activity_add_listing.xml
@@ -148,7 +148,7 @@
                     android:layout_marginStart="10dp"
                     android:text="Condition"
                     android:textSize="19dp"
-                    android:fontFamily="@font/patua_one"
+                    android:fontFamily="@font/patua_one" />
 
 
             <Spinner
@@ -171,7 +171,7 @@
                     android:layout_marginStart="10dp"
                     android:text="Category"
                     android:textSize="19dp"
-                    android:fontFamily="@font/patua_one"
+                    android:fontFamily="@font/patua_one" />
 
 
             <Spinner
