--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+                name="clickHandler"
+                type="com.springsamurais.toyswap.ui.mainactivity.MainActivityClickHandlers"/>
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.mainactivity.MainActivity"
-            android:background="@color/ltyellow">
+            android:background="@color/ltpink">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/header_container"
@@ -57,6 +65,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/main_add_button"
+                android:onClick="@{clickHandler::addListingButtonClicked}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:fabCustomSize="40dp"
@@ -70,3 +79,5 @@
                 android:backgroundTint="@color/blue"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
