--- a/app/src/main/res/layout/activity_add_listing.xml
+++ b/app/src/main/res/layout/activity_add_listing.xml
@@ -49,8 +49,9 @@
 
     <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="615dp"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/header_container"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:paddingTop="20dp"
@@ -148,7 +149,7 @@
                     android:layout_marginStart="10dp"
                     android:text="Condition"
                     android:textSize="19dp"
-                    android:fontFamily="@font/patua_one"
+                    android:fontFamily="@font/patua_one" />
 
 
             <Spinner
@@ -171,7 +172,7 @@
                     android:layout_marginStart="10dp"
                     android:text="Category"
                     android:textSize="19dp"
-                    android:fontFamily="@font/patua_one"
+                    android:fontFamily="@font/patua_one" />
 
 
             <Spinner
