--- a/app/src/main/res/layout/activity_add_listing.xml
+++ b/app/src/main/res/layout/activity_add_listing.xml
@@ -91,6 +91,7 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/user_image"
+
                         android:layout_marginTop="15dp"
                         android:layout_marginStart="65dp"
                         android:text="Capture"
@@ -98,7 +99,7 @@
                         android:backgroundTint="@color/blue"/>
 
                 <Button
-                        android:id="@+id/upload_image_button"
+                        android:id="@+id/gallery_image_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -106,6 +107,7 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginEnd="65dp"
                         android:text="Gallery"
+
                         android:fontFamily="@font/inter"
                         android:backgroundTint="@color/blue"/>
 
@@ -200,6 +202,7 @@
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/blue"
                         android:text="Add Listing"
+                        android:onClick="@{clickHandler::addListingButtonClicked}"
                         android:fontFamily="@font/inter"
                         app:layout_constraintTop_toBottomOf="@id/category_spinner"
                         app:layout_constraintStart_toStartOf="parent"
