--- a/app/src/main/res/layout/listing_item.xml
+++ b/app/src/main/res/layout/listing_item.xml
@@ -6,7 +6,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@drawable/listing_card_bg"
         android:elevation="5dp"
-        android:layout_margin="10dp">
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp" >
 
     <ImageView
             android:id="@+id/listing_image"
