--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.mainactivity.MainActivity"
-            android:background="@color/ltpink">
+            android:background="@color/ltblue">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/header_container"
