--- a/app/src/main/res/layout/listing_item.xml
+++ b/app/src/main/res/layout/listing_item.xml
@@ -25,7 +25,7 @@
             android:id="@+id/listing_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/samosa"
+            android:fontFamily="@font/patua_one"
             android:text="Brand new Pikachu teddy"
             android:textColor="@color/blue"
             android:textSize="16dp"
@@ -45,7 +45,6 @@
             app:layout_constraintTop_toBottomOf="@id/listing_name"
             android:layout_marginStart="9dp"
             android:layout_marginTop="2dp" />
-
 
     <TextView
             android:id="@+id/location_text"
@@ -87,11 +86,28 @@
             android:layout_marginTop="8dp"
             android:layout_marginStart="12dp"
             app:layout_constraintStart_toEndOf="@id/listing_image"
-            app:layout_constraintTop_toBottomOf="@id/location_icon" />
+            app:layout_constraintTop_toBottomOf="@id/location_icon"/>
 
+    <TextView
+            android:id="@+id/date_posted_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/listing_image"
+            app:layout_constraintStart_toEndOf="@id/listing_image"
+            android:layout_marginStart="12dp"
+            android:text="Date posted: "
+            android:fontFamily="@font/patua_one"
+            android:textSize="12sp" />
 
-
-
-
+    <TextView
+            android:id="@+id/date_posted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/date_posted_label"
+            app:layout_constraintBottom_toBottomOf="@id/date_posted_label"
+            android:text="01/07/24"
+            android:fontFamily="@font/inter"
+            android:textSize="10sp"
+            android:layout_marginStart="2dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
