--- a/app/src/main/res/layout/activity_view_listing.xml
+++ b/app/src/main/res/layout/activity_view_listing.xml
@@ -5,6 +5,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable 
+                name="listing" 
+                type="com.springsamurais.toyswap.model.Listing"/>
         <variable
                 name="clickHandler"
                 type="com.springsamurais.toyswap.ui.listing.ViewListingClickHandlers"/>
@@ -205,15 +208,27 @@
                         android:text="27th June 2024"
                         android:fontFamily="@font/inter"
                         android:textSize="14dp" />
-
+                
+                <TextView
+                        android:id="@+id/comment_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/listing_full_date_label"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="25dp"
+                        android:text="Comments"
+                        android:fontFamily="@font/patua_one"
+                        android:textColor="@color/blue"
+                        android:textSize="20sp" />
 
                 <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        app:layout_constraintTop_toBottomOf="@id/listing_full_date_label"
+                        app:layout_constraintTop_toBottomOf="@id/comment_label"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_marginTop="30dp">
+                        android:layout_marginTop="15dp">
 
                 </androidx.cardview.widget.CardView>
 
