--- a/app/src/main/res/layout/activity_view_listing.xml
+++ b/app/src/main/res/layout/activity_view_listing.xml
@@ -85,7 +85,7 @@
                         android:background="@drawable/rounded_green"
                         android:textColor="@color/white"
                         android:textSize="16dp"
-                        android:text="AVAILABLE" />
+                        android:text="@{listing.statusListing}" />
 
                 <ImageView
                         android:id="@+id/listing_full_image"
@@ -106,7 +106,7 @@
                         app:layout_constraintTop_toBottomOf="@id/listing_full_image"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:text="Brand new Pikachu teddy!"
+                        android:text="@{listing.title}"
                         android:fontFamily="@font/patua_one"
                         android:textAlignment="center"
                         android:textSize="24dp"
@@ -121,7 +121,7 @@
                         app:layout_constraintTop_toBottomOf="@id/listing_full_name"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:text="A beautiful teddy, looked after and barely used! Limited edition. Looking to swap for different Pokemon toys or teddies if possible. Thanks."
+                        android:text="@{listing.description}"
                         android:textSize="14dp"
                         android:textAlignment="center"
                         android:layout_marginTop="20dp" />
@@ -130,7 +130,7 @@
                         android:id="@+id/listing_full_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="skettle1"
+                        android:text="@{listing.member.nickname}"
                         app:layout_constraintTop_toBottomOf="@id/listing_full_description"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginEnd="15dp"
@@ -179,9 +179,8 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/listing_map_image"
                         app:layout_constraintStart_toStartOf="@id/listing_full_date"
-
                         android:layout_marginTop="20dp"
-                        android:text="Like New"
+                        android:text="@{listing.itemCondition}"
                         android:fontFamily="@font/inter"
                         android:textSize="14dp" />
 
@@ -205,7 +204,7 @@
                         app:layout_constraintStart_toEndOf="@id/listing_full_date_label"
                         android:layout_marginStart="15dp"
                         android:layout_marginTop="10dp"
-                        android:text="27th June 2024"
+                        android:text="@{listing.datePosted}"
                         android:fontFamily="@font/inter"
                         android:textSize="14dp" />
                 
