--- a/app/src/main/res/layout/activity_view_listing.xml
+++ b/app/src/main/res/layout/activity_view_listing.xml
@@ -65,11 +65,12 @@
         <ScrollView
                 android:id="@+id/listing_scrollview"
                 android:layout_width="match_parent"
-                android:layout_height="630dp"
+                android:layout_height="0dp"
                 tools:layout_editor_absoluteY="81dp"
                 tools:layout_editor_absoluteX="1dp"
                 android:background="@drawable/listing_card_bg"
                 app:layout_constraintTop_toBottomOf="@id/header_container"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_margin="10dp"
                 android:elevation="5dp">
 
