--- a/app/src/main/res/layout/activity_view_listing.xml
+++ b/app/src/main/res/layout/activity_view_listing.xml
@@ -227,6 +227,7 @@
                         android:textSize="20sp" />
 
                 <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/listing_recycler_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/comment_label"
