--- a/app/src/main/res/layout/listing_item.xml
+++ b/app/src/main/res/layout/listing_item.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="175dp"
+        android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@drawable/listing_card_bg"
+        android:padding="10dp"
         android:elevation="5dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -23,14 +24,15 @@
 
     <TextView
             android:id="@+id/listing_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/patua_one"
-            android:text="Brand new Pikachu teddy"
+            android:text="Brand new Pikachu teddy that I adore ever so much and it's just beautiful"
             android:textColor="@color/blue"
             android:textSize="16dp"
-            app:layout_constraintTop_toTopOf="@id/listing_image"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/listing_image"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="10dp"
             android:paddingBottom="4dp"/>
 
@@ -80,9 +82,9 @@
     <TextView
             android:id="@+id/description_text"
             android:layout_width="210dp"
-            android:layout_height="wrap_content"
+            android:layout_height="65dp"
             android:textSize="11dp"
-            android:text="A beautiful teddy, looked after and barely used! Limited edition. Looking to swap for different Pokemon toys or teddies if possible. Thanks."
+            android:text="A beautiful teddy, looked after and barely used! Limited edition. Looking to swap for different Pokemon toys or teddies if possible."
             android:layout_marginTop="8dp"
             android:layout_marginStart="12dp"
             app:layout_constraintStart_toEndOf="@id/listing_image"
@@ -92,9 +94,11 @@
             android:id="@+id/date_posted_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/listing_image"
+            app:layout_constraintTop_toBottomOf="@id/description_text"
             app:layout_constraintStart_toEndOf="@id/listing_image"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
             android:text="Date posted: "
             android:fontFamily="@font/patua_one"
             android:textSize="12sp" />
