--- a/app/src/main/res/layout/activity_view_listing.xml
+++ b/app/src/main/res/layout/activity_view_listing.xml
@@ -228,6 +228,7 @@
 
                 <Button
                         android:id="@+id/add_comment_button"
+                        android:onClick="@{clickHandler::addCommentButtonClicked}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintBottom_toTopOf="@id/listing_recycler_view"
