--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="twhite">#A3FFFFFF</color>
     <color name="blue">#FF5C72B2</color>
-    <color name="ltblue">#225C72B2</color>
+    <color name="ltblue">#635C72B2</color>
     <color name="pink">#A72B7A</color>
-    <color name="ltpink">#1EA72B7A</color>
+    <color name="yellow">#C6FFF0A3</color>
     <color name="grey">#4A4A4A</color>
     <color name="green">#009688</color>
 
