--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,92 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="16dp">
 
-    <data>
-        <variable
-                name="clickHandler"
-                type="com.springsamurais.toyswap.ui.login.LoginActivityClickHandlers"/>
-    </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".ui.login.LoginActivity">
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
 
-        <TextView
-                android:id="@+id/welcome_message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="125dp"
-                android:text="Welcome to"
-                android:fontFamily="@font/inter"
-                android:textColor="@color/grey"
-                android:textSize="20dp" />
+    <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/email"
+            android:layout_marginTop="16dp"
+            android:hint="Password"
+            android:inputType="textPassword" />
 
-        <TextView
-                android:id="@+id/welcome_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/welcome_message"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="ToySwap"
-                android:fontFamily="@font/samosa"
-                android:textSize="55dp"
-                android:textColor="@color/blue" />
+    <Button
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/password"
+            android:layout_marginTop="16dp"
+            android:text="Login" />
 
-        <EditText
-                android:id="@+id/username_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="username"
-                android:fontFamily="@font/inter"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="50dp"
-                android:layout_marginEnd="50dp" />
+    <com.google.android.gms.common.SignInButton
+            android:id="@+id/google_sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="32dp" />
 
-        <EditText
-                android:id="@+id/password_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="password"
-                android:fontFamily="@font/inter"
-                app:layout_constraintTop_toBottomOf="@id/username_input"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="50dp"
-                android:layout_marginEnd="50dp"
-                android:layout_marginTop="20dp" />
-
-        <Button
-                android:id="@+id/login_button"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Login"
-                app:layout_constraintTop_toBottomOf="@id/password_input"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="35dp"
-                android:backgroundTint="@color/blue" />
-
-        <Button
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Sign up"
-                app:layout_constraintTop_toBottomOf="@id/login_button"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="15dp"
-                android:backgroundTint="@color/blue" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</layout>
+</RelativeLayout>
