--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,8 +41,8 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginStart="12dp" />
 
-            <Button
-                    android:id="@+id/login_button"
+            <TextView
+                    android:id="@+id/main_username_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/blue"
@@ -51,7 +51,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginEnd="30dp"
                     android:fontFamily="@font/inter"
-                    android:text="@string/log_in"/>
+                    android:text=""/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
