--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -100,6 +100,7 @@
             android:layout_marginEnd="50dp" />
 
     <Button
+            android:id="@+id/create_new_user_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/location_field"
