--- a/app/src/main/res/layout/activity_view_listing.xml
+++ b/app/src/main/res/layout/activity_view_listing.xml
@@ -48,8 +48,8 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginStart="12dp" />
 
-            <Button
-                    android:id="@+id/login_button"
+            <TextView
+                    android:id="@+id/view_listing_user_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/blue"
@@ -58,7 +58,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginEnd="30dp"
                     android:fontFamily="@font/inter"
-                    android:text="@string/log_in"/>
+                    android:textSize="16sp"
+                    android:text=""/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
