--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="password"
+                android:inputType="textPassword"
                 android:fontFamily="@font/inter"
                 app:layout_constraintTop_toBottomOf="@id/username_input"
                 app:layout_constraintStart_toStartOf="parent"
