--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -76,6 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="password"
+            android:inputType="textPassword"
             android:fontFamily="@font/inter"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@id/username_field"
