--- a/app/src/main/res/layout/listing_item.xml
+++ b/app/src/main/res/layout/listing_item.xml
@@ -19,7 +19,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="15dp"
-            android:src="@drawable/pikachu_toy"
+            android:src="@drawable/img_placeholder"
             android:scaleType="centerCrop" />
 
     <TextView
